# apir/app/controllers/v2/people_controller.rb
@@ -105,7 +105,7 @@ module V2
         :salutation,
         customer_tag_ids: [],
         phones_attributes: [:id, :number, :category, :customer_id],
-        addresses_attributes: [:id, :city, :country, :customer_id, :description, :zip, :street, :supplement, :hidden]
+        addresses_attributes: [:id, :city, :country, :customer_id, :description, :zip, :street, :street_number, :supplement, :hidden]
       )
     end
 
